--- a/projects/toast-ui-image-editor/package.json
+++ b/projects/toast-ui-image-editor/package.json
@@ -1,6 +1,10 @@
 {
-  "name": "toast-ui-image-editor",
+  "name": "ngx-tui-image-editor",
   "version": "0.0.1",
+  "description": "A simple Angular6+ wrapper for TOAST UI Image Editor",
+  "author": { "name": "Joshua Washke" },
+  "repository": { "type": "git", "url": "https://github.com/jwashke/toast-ui-image-editor-angular-wrapper"},
+  "license": "MIT",
   "peerDependencies": {
     "@angular/common": "^6.0.0-rc.0 || ^6.0.0",
     "@angular/core": "^6.0.0-rc.0 || ^6.0.0"
