--- a/projects/toast-ui-image-editor/package.json
+++ b/projects/toast-ui-image-editor/package.json
@@ -11,10 +11,10 @@
   },
   "license": "MIT",
   "peerDependencies": {
-    "@angular/common": "^7.2.7",
-    "@angular/core": "^7.2.7"
+    "@angular/common": "^7.2.7 | ^8.0.0",
+    "@angular/core": "^7.2.7 | ^8.0.0"
   },
-  "dependencies": { 
+  "dependencies": {
     "tui-image-editor": "^3.5.1"
   },
   "devDependencies": {}
